# ErdosPy

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  quick-start.zh.md
quick-start.zh/: index.html
search/: search_index.json
skills/erdospy-workflow/: SKILL.md
src/erdospy/: __init__.py  __main__.py  dashboard.py  db.py  models.py  workflow.py
src/erdospy/cli/: __init__.py  app.py  common.py  forum.py  query.py  serve.py  skills.py  workspace.py
src/erdospy/scraper/: __init__.py  forum.py  incremental.py
tests/: conftest.py  test_cli.py  test_db.py  test_forum.py  test_incremental.py
