[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "erdospy"
version = "0.1.1"
description = "CLI and Python toolkit for exploring Erdős problems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "rexwzh" },
]
dependencies = [
  "typer>=0.16.0",
  "rich>=14.0.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "mkdocs>=1.6.0",
  "pytest>=8.3.0",
  "twine>=5.1.0",
]

[project.scripts]
erdospy = "erdospy.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erdospy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mkdocs]
strict = true
